--- a/dCompiler/dCompiler/dCompiler.vbproj
+++ b/dCompiler/dCompiler/dCompiler.vbproj
@@ -72,9 +72,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyParser.vb" />
-    <Compile Include="AssemblyTraverser.vb" />
-    <Compile Include="dcModule.vb" />
+    <Compile Include="classes\AssemblyParser.vb" />
+    <Compile Include="classes\AssemblyTraverser.vb" />
+    <Compile Include="modules\dcModule.vb" />
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -82,7 +82,7 @@
       <DependentUpon>MainForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GdbInterface.vb" />
+    <Compile Include="classes\GdbInterface.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -98,8 +98,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="RegexModule.vb" />
-    <Compile Include="SymbolProcessor.vb" />
+    <Compile Include="modules\RegexModule.vb" />
+    <Compile Include="classes\SymbolProcessor.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
@@ -124,5 +124,6 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
